2003-11-28  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Switched to a different bit of the libxml2 API to parse the document.
	- Made page_id default to "index" when frag_id == NULL.

	* src/yelp-pager.c:
	* src/yelp-pager.h:
	- Implemented yelp_uri_is_page.

	* src/yelp-toc-pager.c:
	- Implemented resolve_uri.
	- Finished parsing of TOC, just need to write the pages.
	- Began work on indexing stuff.

	* src/yelp-uri.c:
	- Fixed memory corruption.

	* src/yelp-window.c:
	- Added callbacks for error and finish signals.
	- Made the TOC go through window_handle_pager_uri.
	- Switched to yelp_pager_uri_is_page in page callback.

2003-11-12  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	- Add yelp-error.[ch] to SOURCES for test-pager.

	* src/yelp-error.h:
	- Add YELP_ERROR_FAILED_TOC.

	* src/yelp-pager.c:
	- Don't free memory you're not supposed to, dummy.

	* src/yelp-toc-pager.c:
	- More work on the toc generation.

	* src/yelp-window.c:
	- Make sidebar selection work.
	- Remove huge block of commented-out code.

2003-11-19  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Prepare to work around seriesid madness.
	- Prepare to read the actual toc file in.

2003-11-18  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	- Add yelp-toc-pager.[ch] to test-pager build.

	* src/yelp-toc-pager.c:
	- Make the hashing of OMF files work completely.

2003-11-18  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/yelp-reader.c:
	* src/yelp-reader.h:
	- Removing YelpReader

2003-11-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Only read files ending in .omf

2003-11-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Pass $mediaobject_path as a param

2003-11-18  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	- Implement pausing of the TocPager.
	- Add default handlers for error, cancel, and finish.

	* src/yelp-toc-pager.c: