@@ -1,3 +1,9 @@
+2003-11-29  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-window.c:
+	- Don't leak GErrors.
+	- Report an error in the error signal callback.
+
 2003-11-28  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
